[gd_scene load_steps=25 format=2]

[ext_resource path="res://Asset/Character Asset/Character_Animation_Spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Scene/Miscellaneous Scene/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Script/Character Script/Wizard.gd" type="Script" id=3]
[ext_resource path="res://Asset/Miscellaneous Asset/Music/SFX_Jump_07.wav" type="AudioStream" id=4]
[ext_resource path="res://Asset/Miscellaneous Asset/Music/07_human_atk_sword_3.wav" type="AudioStream" id=13]

[sub_resource type="Animation" id=24]
resource_name = "Damage"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Position2D/Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Position2D/Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=30]
resource_name = "InvulnerabilityFlash"
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D/Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Position2D/Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
resource_name = "Range Attack"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Position2D/Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Position2D/Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "characterAttackFinished"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "Walking"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Position2D/Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Position2D/Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "Range Attack"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "Walking"

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=15]
states/Idle/node = SubResource( 19 )
states/Idle/position = Vector2( -763, -338 )
"states/Range Attack/node" = SubResource( 9 )
"states/Range Attack/position" = Vector2( -523, -455 )
states/Walking/node = SubResource( 10 )
states/Walking/position = Vector2( -763, -455 )
transitions = [ "Walking", "Range Attack", SubResource( 17 ), "Range Attack", "Walking", SubResource( 18 ), "Walking", "Idle", SubResource( 20 ), "Idle", "Walking", SubResource( 21 ), "Idle", "Range Attack", SubResource( 22 ), "Range Attack", "Idle", SubResource( 23 ) ]
start_node = "Idle"
graph_offset = Vector2( -1475.8, -534 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=16]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 11.5 )

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 7, 11 )

[node name="Wizard" type="KinematicBody2D" groups=["Player"]]
collision_layer = 2
script = ExtResource( 3 )
speed = 80
jumpPeak = 40.0
jumpHeight = 5000
invincibilityDuration = 1.5

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]

[node name="Position2D" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="Position2D"]
texture = ExtResource( 1 )
hframes = 8
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="Position2D"]
root_node = NodePath("../..")
anims/Damage = SubResource( 24 )
anims/Idle = SubResource( 2 )
anims/InvulnerabilityFlash = SubResource( 30 )
anims/RESET = SubResource( 3 )
"anims/Range Attack" = SubResource( 7 )
anims/Walking = SubResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="Position2D"]
tree_root = SubResource( 15 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4.5 )
shape = SubResource( 1 )

[node name="SFX" type="Node" parent="."]

[node name="MeleeSFX" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 13 )
bus = "SFX"

[node name="JumpSFX" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 4 )
volume_db = -13.52
bus = "SFX"

[node name="BounceRaycasts" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="BounceRaycasts"]
position = Vector2( 0, 16 )
cast_to = Vector2( 0, 12 )
collision_mask = 32
collide_with_areas = true

[node name="RayCast2D2" type="RayCast2D" parent="BounceRaycasts"]
position = Vector2( -4, 16 )
cast_to = Vector2( 0, 12 )
collision_mask = 32
collide_with_areas = true

[node name="RayCast2D3" type="RayCast2D" parent="BounceRaycasts"]
position = Vector2( 4, 16 )
cast_to = Vector2( 0, 12 )
collision_mask = 32
collide_with_areas = true

[node name="Hitbox" parent="." instance=ExtResource( 2 )]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, 5 )
shape = SubResource( 29 )

[node name="InvincibiltyFlashTimer" type="Timer" parent="."]

[node name="PositionInDeath" type="Position2D" parent="."]

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="InvincibiltyFlashTimer" to="." method="_on_InvincibiltyFlashTimer_timeout"]

[editable path="Hitbox"]
